rotinas para criação, alteração e exclusão do produto
